--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -12,8 +12,9 @@
     width: 300px;
     background-color: rgb(78, 29, 29);
     display: flex;
-    justify-content: center;
-    align-items: flex-start;
+    justify-content: flex-start;
+    align-items: center;
+    flex-direction: column;
 }
 
 .tab-button {
@@ -26,4 +27,8 @@
         1px 1px 2px #e45d5d;
     height: 50px;
     width: 150px;
+}
+
+.x-close {
+    width: 20px;
 }
