--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
     <h2>Company-Tabs</h2>
     <hr style="width: 100%;">
     @for(tab of Tabs; track tab) {
-    <button class="tab-button">{{tab.companyName}}</button>
+    <button class="tab-button" (click)="goToPage('company-data')">{{tab.companyName}}</button>
     <div class="x-close" (click)="RemoveTab(tab.companyId)">
       <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
         <rect width="24" height="24" fill="none" />
